add self presentation on top of page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <v-main class="d-flex flex-column align-center grey darken-3">
                 <v-hover v-slot="{ hover }" class="rounded-xl">
                     <v-sheet :elevation="hover ? 13 : 2" :class="($vuetify.breakpoint.width < 800 ? 'ma-5' : 'ma-13' )+' d-flex flex-column align-center rounded-lg'" max-width="1200" min-width="250">
-                        <v-sheet class="ma-10 d-flex flex-wrap align-start justify-space-around " :width="$vuetify.breakpoint.mobile ? '90%' : '90%'">
+                        <v-sheet class="mx-10 mt-10 d-flex flex-wrap align-start justify-space-around " :width="$vuetify.breakpoint.mobile ? '90%' : '90%'">
                             <v-tooltip bottom>
                                 <template v-slot:activator="{ on, attrs }">
                                     <span class="ma-1 elevation-0" v-bind="attrs" v-on="on">
@@ -78,6 +78,13 @@
                                 LinkedIn profile
                             </v-tooltip>
                         </v-sheet>
+                        <v-sheet class="ma-10 text-center">
+                            Hi, I'm a JavaScript fullstack developer.
+                            Creator and mainteiner of Android Apps with React Native and Web Applications with Vue.js and Angular.
+                            I love Telegram chatbots and I teach people how to create them with my YouTube step by step video tutorials.
+                            I'm looking to collaborate on web and mobile development, and also interested in automation with Google Apps Script.
+                            I'm currently learning GraphQL and Redux.
+                        </v-sheet>
                         <v-sheet :class="$vuetify.breakpoint.mobile ? 'mx-7' : 'mx-15' +' mt-0 rounded-lg d-flex flex-column align-start elevation-0'" width="90%">
                             <h3>Brief career history:</h3>
                             <span class="d-flex"><b class="mr-3">2012</b> CS degree</span>
@@ -120,28 +127,22 @@
                                         Google
                                         Docs using JavaScript. Nowadays I am focused on frontend JS libraries, using React and Vue in most of my recent works.
 
-
-                                        jvictorjs/README.md
-                                        - 👋 Hi, I’m @jvictorjs
-                                        - 👀 I’m interested in ...
-                                        - 🌱 I’m currently learning ...
-                                        - 💞 I’m looking to collaborate on ...
-                                        - 📫 How to reach me ...
-
                                     </v-sheet>
                                 </v-tooltip>
                             </v-sheet>
                             <br>
-                            <h3>My bets projects</h3>
+                            <h3>Projects</h3>
                             <v-sheet class="d-flex flex-column">
                                 <v-tooltip bottom>
                                     <template v-slot:activator="{ on, attrs }">
                                         <span class="elevation-0" v-bind="attrs" v-on="on">
                                             <span>- <a href="https://play.google.com/store/apps/details?id=com.bolanarede.tremdgol_free" target="_blank">TremdGol Free</a></span>
-                                            <span> (React Native - Android app)</span>
+                                            <span> (React Native - Android app | 1k+ downloads)</span>
                                         </span>
                                     </template>
-                                    <v-sheet>
+                                    <v-sheet class="d-flex flex-column">
+                                        <h3>Backend: JSON Server running on a DigitalOcean dedicated Ubuntu droplet.</h3>
+                                        <h3>Frontend: React Native with Expo.</h3>
                                         <img src="./assets/playsotre-tremdgol-free-screenshot.png" width="500" />
                                     </v-sheet>
                                 </v-tooltip>
@@ -153,6 +154,8 @@
                                         </span>
                                     </template>
                                     <v-sheet>
+                                        <h3>Backend: JSON Server running on a DigitalOcean dedicated Ubuntu droplet.</h3>
+                                        <h3>Frontend: Angular with TypeScript.</h3>
                                         <img src="./assets/bolanarede-screenshot.png" width="500" />
                                     </v-sheet>
                                 </v-tooltip>
@@ -164,6 +167,8 @@
                                         </span>
                                     </template>
                                     <v-sheet>
+                                        <h3>Backend: JSON Server running on a DigitalOcean dedicated Ubuntu droplet.</h3>
+                                        <h3>Frontend: Vue.js and Vuetify</h3>
                                         comming soon...
                                     </v-sheet>
                                 </v-tooltip>
@@ -479,10 +484,10 @@
                         </v-sheet>
 
                         <v-sheet class="mt-5 mx-15 text-wrap text-center text-caption">
-                            Responsive web page built with <b>VUE.JS</b>,
+                            Responsive web page built from scratch with <b>VUE.JS</b>,
                             a framework running over <b>NODE.JS</b>, using <b>JAVASCRIPT</b>, <b>HTML</b> and <b>CSS</b>.
                             In addition, to faster and beauty design I used <b>VUETIFY</b> UI library and some <b>MATERIAL DESIGN ICONS</b>.
-                            All hosted in a Linux <b>UBUNTU</b>
+                            Dosted in a Linux <b>UBUNTU</b>
                             dedicated server at <b>DIGITALOCEAN</b> cloud infraestructure. Version control by <b>GIT</b> and <b>GITHUB</b>.
                             Reverse proxy with <b>NGINX</b>. <b>SSL</b> certification with <b>CERTBOT</b> and Linux process management with <b>PM2</b> | screen res:
                             {{$vuetify.breakpoint.width}}x{{$vuetify.breakpoint.height}}
